--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
   <meta name="theme-color" media="(prefers-color-scheme: light)" content="#3880ff" />
   <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#eb445a" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-title" content="Ionic App" />
+  <meta name="apple-mobile-web-app-title" content="Salmon Stats" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 </head>
 
